Cleanups, reducing compilation warnings. Fixing deprecation warnings